--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ dependencyResolutionManagement {
     }
 }
 rootProject.name = "IntelligentService"
-include ':app'
+include ':demo'
+include ':intelligentservice'
