--- a/intelligentservice/build.gradle
+++ b/intelligentservice/build.gradle
@@ -1,22 +1,18 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id("org.jetbrains.kotlin.kapt")
-    id("dagger.hilt.android.plugin")
 }
 
 android {
-    namespace 'pitam.intelligentservice.demo'
+    namespace 'pitam.intelligentservice'
     compileSdk 33
 
     defaultConfig {
-        applicationId "pitam.intelligentservice.demo"
         minSdk 22
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -42,9 +38,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation(project(":intelligentservice"))
+    //Timber
+    implementation("com.jakewharton.timber:timber:5.0.1")
 
-    // Hilt
-    implementation("com.google.dagger:hilt-android:$hilt_version")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
+    //LifecycleService
+    api("androidx.lifecycle:lifecycle-service:2.5.1")
 }
